// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductPage should render the component correctly -- desktop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ProductsPagestyles__ProductsPageWrapper-sc-1sq14qb-0 hSmryq"
      >
        <ul
          aria-label="Categories filter"
          class="ProductsPagestyles__CategoriesFilter-sc-1sq14qb-2 jAAIyz"
          role="list"
        >
          <li
            aria-selected="false"
            class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
            role="listitem"
            tabindex="0"
            title="Beverages"
            value="5b675e5e5936635728f9fc30"
          >
            Beverages
          </li>
          <li
            aria-selected="false"
            class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
            role="listitem"
            tabindex="0"
            title="Bakery Cakes and Dairy"
            value="5b6899123d1a866534f516de"
          >
            Bakery Cakes and Dairy
          </li>
          <li
            aria-selected="false"
            class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
            role="listitem"
            tabindex="0"
            title="Beauty and Hygiene"
            value="5b68994e3d1a866534f516df"
          >
            Beauty and Hygiene
          </li>
          <li
            aria-selected="false"
            class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
            role="listitem"
            tabindex="0"
            title="Baby Care"
            value="5b6899683d1a866534f516e0"
          >
            Baby Care
          </li>
          <li
            aria-selected="false"
            class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
            role="listitem"
            tabindex="0"
            title="Seafood"
            value="5b68997d3d1a866534f516e1"
          >
            Seafood
          </li>
          <li
            aria-selected="false"
            class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
            role="listitem"
            tabindex="0"
            title="Fruits & Vegetables"
            value="5b6899953d1a866534f516e2"
          >
            Fruits & Vegetables
          </li>
        </ul>
        <div
          class="SectionWrapperstyles__SectionWrapper-sc-1qizg9n-0 gZaGKd"
        >
          <ul
            class="ProductListstyles__ProductListWrapper-sc-60ko8j-0 hGWvTr"
          >
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Fresho Kiwi - Green, 3 pcs"
                >
                  Fresho Kiwi - Green, 3 pcs
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Fresho Kiwi - Green, 3 pcs"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Fresho Kiwi - Green, 3 pcs"
                    />
                  </div>
                </div>
                <p>
                  Kiwis are oval shaped with a brownish outer skin. The flesh is bright green and juicy with tiny, edible black seeds.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  87
                </p>
                <button
                  aria-label="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6a7f01a7c38429530883"
                  name="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                  title="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Apple - Washington, Regular, 4 pcs"
                >
                  Apple - Washington, Regular, 4 pcs
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Apple - Washington, Regular, 4 pcs"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Apple - Washington, Regular, 4 pcs"
                    />
                  </div>
                </div>
                <p>
                  The bright red coloured and heart shaped Washington apples are crunchy, juicy and slightly sweet. Washington Apples are a natural source of fibre and are fat free.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  187
                </p>
                <button
                  aria-label="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6aeb01a7c38429530884"
                  name="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                  title="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Fresho Pomegrante Peeled, 500 gm "
                >
                  Fresho Pomegrante Peeled, 500 gm 
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Fresho Pomegrante Peeled, 500 gm "
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Fresho Pomegrante Peeled, 500 gm "
                    />
                  </div>
                </div>
                <p>
                  Pomegranate variety has a glossy, vibrant and soft ruby-red skin. The inside of the fruit is divided into compartments by thin white membranes.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  88
                </p>
                <button
                  aria-label="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6b7001a7c38429530885"
                  name="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                  title="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Capsicum - Green, 1 kg"
                >
                  Capsicum - Green, 1 kg
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Capsicum - Green, 1 kg"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Capsicum - Green, 1 kg"
                    />
                  </div>
                </div>
                <p>
                  Leaving a moderately pungent taste on the tongue, Green capsicums, also known as green peppers are bell shaped, medium-sized fruit pods.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  137
                </p>
                <button
                  aria-label="Buy Capsicum - Green, 1 kg @Rs.137"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6bdc01a7c38429530886"
                  name="Buy Capsicum - Green, 1 kg @Rs.137"
                  title="Buy Capsicum - Green, 1 kg @Rs.137"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Tomato - Local, Organically Grown, 500 gm"
                >
                  Tomato - Local, Organically Grown, 500 gm
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Tomato - Local, Organically Grown, 500 gm"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Tomato - Local, Organically Grown, 500 gm"
                    />
                  </div>
                </div>
                <p>
                  Fresho brings to you an exquisite range of locally grown organic tomatoes, which are now available at bigbasket. These organic tomatoes are free from harmful pesticides and insecticides.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  12
                </p>
                <button
                  aria-label="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6c1801a7c38429530887"
                  name="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                  title="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Sandwich Bread - White, Chemical Free, 400 gm"
                >
                  Sandwich Bread - White, Chemical Free, 400 gm
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Sandwich Bread - White, Chemical Free, 400 gm"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Sandwich Bread - White, Chemical Free, 400 gm"
                    />
                  </div>
                </div>
                <p>
                  Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we decided to give you just that. We start baking our breads once you order using the finest ingredients available.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  32
                </p>
                <button
                  aria-label="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6d3201a7c38429530888"
                  name="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                  title="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Organic Fresh Paneer, 200 gm "
                >
                  Organic Fresh Paneer, 200 gm 
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Organic Fresh Paneer, 200 gm "
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Organic Fresh Paneer, 200 gm "
                    />
                  </div>
                </div>
                <p>
                  Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we deFresho Organic Milk is sourced from farms that have been certified organic for over 8 years. All feed is naturally grown with no pesticides or fertilizers.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  98
                </p>
                <button
                  aria-label="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6d6201a7c38429530889"
                  name="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                  title="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                >
                  Epigamia Greek Yogurt - Blueberry, 90 gm Cup
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                    />
                  </div>
                </div>
                <p>
                  Epigama means in Ancient Greek meant a way to Formalize the relationship between different nations. Epigamia greek yogurt is one of the most authentic yoghurts which advocates a healthy lifestyle with delicious taste. An excellent source of protein without the added fat.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  40
                </p>
                <button
                  aria-label="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6d9e01a7c3842953088a"
                  name="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                  title="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Epigamia Greek Yogurt - Strawberry, 90 gm"
                >
                  Epigamia Greek Yogurt - Strawberry, 90 gm
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Epigamia Greek Yogurt - Strawberry, 90 gm"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Epigamia Greek Yogurt - Strawberry, 90 gm"
                    />
                  </div>
                </div>
                <p>
                  Low Fat and High protein delicious and thick Greek Yogurt.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  40
                </p>
                <button
                  aria-label="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6dd701a7c3842953088b"
                  name="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                  title="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                >
                  Buy now
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ProductsPagestyles__ProductsPageWrapper-sc-1sq14qb-0 hSmryq"
    >
      <ul
        aria-label="Categories filter"
        class="ProductsPagestyles__CategoriesFilter-sc-1sq14qb-2 jAAIyz"
        role="list"
      >
        <li
          aria-selected="false"
          class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
          role="listitem"
          tabindex="0"
          title="Beverages"
          value="5b675e5e5936635728f9fc30"
        >
          Beverages
        </li>
        <li
          aria-selected="false"
          class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
          role="listitem"
          tabindex="0"
          title="Bakery Cakes and Dairy"
          value="5b6899123d1a866534f516de"
        >
          Bakery Cakes and Dairy
        </li>
        <li
          aria-selected="false"
          class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
          role="listitem"
          tabindex="0"
          title="Beauty and Hygiene"
          value="5b68994e3d1a866534f516df"
        >
          Beauty and Hygiene
        </li>
        <li
          aria-selected="false"
          class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
          role="listitem"
          tabindex="0"
          title="Baby Care"
          value="5b6899683d1a866534f516e0"
        >
          Baby Care
        </li>
        <li
          aria-selected="false"
          class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
          role="listitem"
          tabindex="0"
          title="Seafood"
          value="5b68997d3d1a866534f516e1"
        >
          Seafood
        </li>
        <li
          aria-selected="false"
          class="ProductsPagestyles__CategoryFilterItem-sc-1sq14qb-3 bsntHE"
          role="listitem"
          tabindex="0"
          title="Fruits & Vegetables"
          value="5b6899953d1a866534f516e2"
        >
          Fruits & Vegetables
        </li>
      </ul>
      <div
        class="SectionWrapperstyles__SectionWrapper-sc-1qizg9n-0 gZaGKd"
      >
        <ul
          class="ProductListstyles__ProductListWrapper-sc-60ko8j-0 hGWvTr"
        >
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Fresho Kiwi - Green, 3 pcs"
              >
                Fresho Kiwi - Green, 3 pcs
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Fresho Kiwi - Green, 3 pcs"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Fresho Kiwi - Green, 3 pcs"
                  />
                </div>
              </div>
              <p>
                Kiwis are oval shaped with a brownish outer skin. The flesh is bright green and juicy with tiny, edible black seeds.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                87
              </p>
              <button
                aria-label="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6a7f01a7c38429530883"
                name="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                title="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Apple - Washington, Regular, 4 pcs"
              >
                Apple - Washington, Regular, 4 pcs
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Apple - Washington, Regular, 4 pcs"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Apple - Washington, Regular, 4 pcs"
                  />
                </div>
              </div>
              <p>
                The bright red coloured and heart shaped Washington apples are crunchy, juicy and slightly sweet. Washington Apples are a natural source of fibre and are fat free.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                187
              </p>
              <button
                aria-label="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6aeb01a7c38429530884"
                name="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                title="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Fresho Pomegrante Peeled, 500 gm "
              >
                Fresho Pomegrante Peeled, 500 gm 
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Fresho Pomegrante Peeled, 500 gm "
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Fresho Pomegrante Peeled, 500 gm "
                  />
                </div>
              </div>
              <p>
                Pomegranate variety has a glossy, vibrant and soft ruby-red skin. The inside of the fruit is divided into compartments by thin white membranes.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                88
              </p>
              <button
                aria-label="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6b7001a7c38429530885"
                name="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                title="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Capsicum - Green, 1 kg"
              >
                Capsicum - Green, 1 kg
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Capsicum - Green, 1 kg"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Capsicum - Green, 1 kg"
                  />
                </div>
              </div>
              <p>
                Leaving a moderately pungent taste on the tongue, Green capsicums, also known as green peppers are bell shaped, medium-sized fruit pods.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                137
              </p>
              <button
                aria-label="Buy Capsicum - Green, 1 kg @Rs.137"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6bdc01a7c38429530886"
                name="Buy Capsicum - Green, 1 kg @Rs.137"
                title="Buy Capsicum - Green, 1 kg @Rs.137"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Tomato - Local, Organically Grown, 500 gm"
              >
                Tomato - Local, Organically Grown, 500 gm
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Tomato - Local, Organically Grown, 500 gm"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Tomato - Local, Organically Grown, 500 gm"
                  />
                </div>
              </div>
              <p>
                Fresho brings to you an exquisite range of locally grown organic tomatoes, which are now available at bigbasket. These organic tomatoes are free from harmful pesticides and insecticides.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                12
              </p>
              <button
                aria-label="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6c1801a7c38429530887"
                name="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                title="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Sandwich Bread - White, Chemical Free, 400 gm"
              >
                Sandwich Bread - White, Chemical Free, 400 gm
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Sandwich Bread - White, Chemical Free, 400 gm"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Sandwich Bread - White, Chemical Free, 400 gm"
                  />
                </div>
              </div>
              <p>
                Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we decided to give you just that. We start baking our breads once you order using the finest ingredients available.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                32
              </p>
              <button
                aria-label="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6d3201a7c38429530888"
                name="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                title="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Organic Fresh Paneer, 200 gm "
              >
                Organic Fresh Paneer, 200 gm 
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Organic Fresh Paneer, 200 gm "
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Organic Fresh Paneer, 200 gm "
                  />
                </div>
              </div>
              <p>
                Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we deFresho Organic Milk is sourced from farms that have been certified organic for over 8 years. All feed is naturally grown with no pesticides or fertilizers.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                98
              </p>
              <button
                aria-label="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6d6201a7c38429530889"
                name="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                title="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
              >
                Epigamia Greek Yogurt - Blueberry, 90 gm Cup
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                  />
                </div>
              </div>
              <p>
                Epigama means in Ancient Greek meant a way to Formalize the relationship between different nations. Epigamia greek yogurt is one of the most authentic yoghurts which advocates a healthy lifestyle with delicious taste. An excellent source of protein without the added fat.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                40
              </p>
              <button
                aria-label="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6d9e01a7c3842953088a"
                name="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                title="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Epigamia Greek Yogurt - Strawberry, 90 gm"
              >
                Epigamia Greek Yogurt - Strawberry, 90 gm
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Epigamia Greek Yogurt - Strawberry, 90 gm"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Epigamia Greek Yogurt - Strawberry, 90 gm"
                  />
                </div>
              </div>
              <p>
                Low Fat and High protein delicious and thick Greek Yogurt.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                40
              </p>
              <button
                aria-label="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6dd701a7c3842953088b"
                name="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                title="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
              >
                Buy now
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProductPage should render the component correctly -- mobile 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ProductsPagestyles__ProductsPageWrapper-sc-1sq14qb-0 hxVWzu"
      >
        <div
          class="ProductsPagestyles__CategoriesFilterDropdown-sc-1sq14qb-1 khOCnj"
        >
          <button
            class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
            id="categories-filter"
            name="Selected category - undefined"
            title="Selected category - undefined"
          >
            <span>
              Select Category
            </span>
            <span>
              <svg
                class="bi bi-chevron-down"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="SectionWrapperstyles__SectionWrapper-sc-1qizg9n-0 gZaGKd"
        >
          <ul
            class="ProductListstyles__ProductListWrapper-sc-60ko8j-0 hGWvTr"
          >
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Fresho Kiwi - Green, 3 pcs"
                >
                  Fresho Kiwi - Green, 3 pcs
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Fresho Kiwi - Green, 3 pcs"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Fresho Kiwi - Green, 3 pcs"
                    />
                  </div>
                </div>
                <p>
                  Kiwis are oval shaped with a brownish outer skin. The flesh is bright green and juicy with tiny, edible black seeds.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  87
                </p>
                <button
                  aria-label="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6a7f01a7c38429530883"
                  name="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                  title="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Apple - Washington, Regular, 4 pcs"
                >
                  Apple - Washington, Regular, 4 pcs
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Apple - Washington, Regular, 4 pcs"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Apple - Washington, Regular, 4 pcs"
                    />
                  </div>
                </div>
                <p>
                  The bright red coloured and heart shaped Washington apples are crunchy, juicy and slightly sweet. Washington Apples are a natural source of fibre and are fat free.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  187
                </p>
                <button
                  aria-label="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6aeb01a7c38429530884"
                  name="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                  title="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Fresho Pomegrante Peeled, 500 gm "
                >
                  Fresho Pomegrante Peeled, 500 gm 
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Fresho Pomegrante Peeled, 500 gm "
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Fresho Pomegrante Peeled, 500 gm "
                    />
                  </div>
                </div>
                <p>
                  Pomegranate variety has a glossy, vibrant and soft ruby-red skin. The inside of the fruit is divided into compartments by thin white membranes.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  88
                </p>
                <button
                  aria-label="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6b7001a7c38429530885"
                  name="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                  title="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Capsicum - Green, 1 kg"
                >
                  Capsicum - Green, 1 kg
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Capsicum - Green, 1 kg"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Capsicum - Green, 1 kg"
                    />
                  </div>
                </div>
                <p>
                  Leaving a moderately pungent taste on the tongue, Green capsicums, also known as green peppers are bell shaped, medium-sized fruit pods.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  137
                </p>
                <button
                  aria-label="Buy Capsicum - Green, 1 kg @Rs.137"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6bdc01a7c38429530886"
                  name="Buy Capsicum - Green, 1 kg @Rs.137"
                  title="Buy Capsicum - Green, 1 kg @Rs.137"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Tomato - Local, Organically Grown, 500 gm"
                >
                  Tomato - Local, Organically Grown, 500 gm
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Tomato - Local, Organically Grown, 500 gm"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Tomato - Local, Organically Grown, 500 gm"
                    />
                  </div>
                </div>
                <p>
                  Fresho brings to you an exquisite range of locally grown organic tomatoes, which are now available at bigbasket. These organic tomatoes are free from harmful pesticides and insecticides.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  12
                </p>
                <button
                  aria-label="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6c1801a7c38429530887"
                  name="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                  title="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Sandwich Bread - White, Chemical Free, 400 gm"
                >
                  Sandwich Bread - White, Chemical Free, 400 gm
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Sandwich Bread - White, Chemical Free, 400 gm"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Sandwich Bread - White, Chemical Free, 400 gm"
                    />
                  </div>
                </div>
                <p>
                  Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we decided to give you just that. We start baking our breads once you order using the finest ingredients available.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  32
                </p>
                <button
                  aria-label="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6d3201a7c38429530888"
                  name="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                  title="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Organic Fresh Paneer, 200 gm "
                >
                  Organic Fresh Paneer, 200 gm 
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Organic Fresh Paneer, 200 gm "
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Organic Fresh Paneer, 200 gm "
                    />
                  </div>
                </div>
                <p>
                  Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we deFresho Organic Milk is sourced from farms that have been certified organic for over 8 years. All feed is naturally grown with no pesticides or fertilizers.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  98
                </p>
                <button
                  aria-label="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6d6201a7c38429530889"
                  name="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                  title="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                >
                  Epigamia Greek Yogurt - Blueberry, 90 gm Cup
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                    />
                  </div>
                </div>
                <p>
                  Epigama means in Ancient Greek meant a way to Formalize the relationship between different nations. Epigamia greek yogurt is one of the most authentic yoghurts which advocates a healthy lifestyle with delicious taste. An excellent source of protein without the added fat.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  40
                </p>
                <button
                  aria-label="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6d9e01a7c3842953088a"
                  name="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                  title="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                >
                  Buy now
                </button>
              </div>
            </li>
            <li
              class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
            >
              <div
                class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
              >
                <h3
                  title="Epigamia Greek Yogurt - Strawberry, 90 gm"
                >
                  Epigamia Greek Yogurt - Strawberry, 90 gm
                </h3>
                <div>
                  <div
                    style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                  >
                    <div
                      style="display: block; box-sizing: border-box; padding-top: 100%;"
                    />
                    <noscript />
                    <img
                      alt="Epigamia Greek Yogurt - Strawberry, 90 gm"
                      data-nimg="true"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="Epigamia Greek Yogurt - Strawberry, 90 gm"
                    />
                  </div>
                </div>
                <p>
                  Low Fat and High protein delicious and thick Greek Yogurt.
                </p>
              </div>
              <div
                class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
              >
                <p>
                  MRP Rs.
                  40
                </p>
                <button
                  aria-label="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                  class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                  id="buy-5b6c6dd701a7c3842953088b"
                  name="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                  title="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                >
                  Buy now
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ProductsPagestyles__ProductsPageWrapper-sc-1sq14qb-0 hxVWzu"
    >
      <div
        class="ProductsPagestyles__CategoriesFilterDropdown-sc-1sq14qb-1 khOCnj"
      >
        <button
          class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
          id="categories-filter"
          name="Selected category - undefined"
          title="Selected category - undefined"
        >
          <span>
            Select Category
          </span>
          <span>
            <svg
              class="bi bi-chevron-down"
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="SectionWrapperstyles__SectionWrapper-sc-1qizg9n-0 gZaGKd"
      >
        <ul
          class="ProductListstyles__ProductListWrapper-sc-60ko8j-0 hGWvTr"
        >
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Fresho Kiwi - Green, 3 pcs"
              >
                Fresho Kiwi - Green, 3 pcs
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Fresho Kiwi - Green, 3 pcs"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Fresho Kiwi - Green, 3 pcs"
                  />
                </div>
              </div>
              <p>
                Kiwis are oval shaped with a brownish outer skin. The flesh is bright green and juicy with tiny, edible black seeds.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                87
              </p>
              <button
                aria-label="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6a7f01a7c38429530883"
                name="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
                title="Buy Fresho Kiwi - Green, 3 pcs @Rs.87"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Apple - Washington, Regular, 4 pcs"
              >
                Apple - Washington, Regular, 4 pcs
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Apple - Washington, Regular, 4 pcs"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Apple - Washington, Regular, 4 pcs"
                  />
                </div>
              </div>
              <p>
                The bright red coloured and heart shaped Washington apples are crunchy, juicy and slightly sweet. Washington Apples are a natural source of fibre and are fat free.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                187
              </p>
              <button
                aria-label="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6aeb01a7c38429530884"
                name="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
                title="Buy Apple - Washington, Regular, 4 pcs @Rs.187"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Fresho Pomegrante Peeled, 500 gm "
              >
                Fresho Pomegrante Peeled, 500 gm 
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Fresho Pomegrante Peeled, 500 gm "
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Fresho Pomegrante Peeled, 500 gm "
                  />
                </div>
              </div>
              <p>
                Pomegranate variety has a glossy, vibrant and soft ruby-red skin. The inside of the fruit is divided into compartments by thin white membranes.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                88
              </p>
              <button
                aria-label="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6b7001a7c38429530885"
                name="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
                title="Buy Fresho Pomegrante Peeled, 500 gm  @Rs.88"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Capsicum - Green, 1 kg"
              >
                Capsicum - Green, 1 kg
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Capsicum - Green, 1 kg"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Capsicum - Green, 1 kg"
                  />
                </div>
              </div>
              <p>
                Leaving a moderately pungent taste on the tongue, Green capsicums, also known as green peppers are bell shaped, medium-sized fruit pods.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                137
              </p>
              <button
                aria-label="Buy Capsicum - Green, 1 kg @Rs.137"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6bdc01a7c38429530886"
                name="Buy Capsicum - Green, 1 kg @Rs.137"
                title="Buy Capsicum - Green, 1 kg @Rs.137"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Tomato - Local, Organically Grown, 500 gm"
              >
                Tomato - Local, Organically Grown, 500 gm
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Tomato - Local, Organically Grown, 500 gm"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Tomato - Local, Organically Grown, 500 gm"
                  />
                </div>
              </div>
              <p>
                Fresho brings to you an exquisite range of locally grown organic tomatoes, which are now available at bigbasket. These organic tomatoes are free from harmful pesticides and insecticides.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                12
              </p>
              <button
                aria-label="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6c1801a7c38429530887"
                name="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
                title="Buy Tomato - Local, Organically Grown, 500 gm @Rs.12"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Sandwich Bread - White, Chemical Free, 400 gm"
              >
                Sandwich Bread - White, Chemical Free, 400 gm
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Sandwich Bread - White, Chemical Free, 400 gm"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Sandwich Bread - White, Chemical Free, 400 gm"
                  />
                </div>
              </div>
              <p>
                Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we decided to give you just that. We start baking our breads once you order using the finest ingredients available.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                32
              </p>
              <button
                aria-label="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6d3201a7c38429530888"
                name="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
                title="Buy Sandwich Bread - White, Chemical Free, 400 gm @Rs.32"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Organic Fresh Paneer, 200 gm "
              >
                Organic Fresh Paneer, 200 gm 
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Organic Fresh Paneer, 200 gm "
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Organic Fresh Paneer, 200 gm "
                  />
                </div>
              </div>
              <p>
                Freshly Baked bread is one of lifes greatest simple pleasures and at Bigbasket we deFresho Organic Milk is sourced from farms that have been certified organic for over 8 years. All feed is naturally grown with no pesticides or fertilizers.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                98
              </p>
              <button
                aria-label="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6d6201a7c38429530889"
                name="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
                title="Buy Organic Fresh Paneer, 200 gm  @Rs.98"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
              >
                Epigamia Greek Yogurt - Blueberry, 90 gm Cup
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Epigamia Greek Yogurt - Blueberry, 90 gm Cup"
                  />
                </div>
              </div>
              <p>
                Epigama means in Ancient Greek meant a way to Formalize the relationship between different nations. Epigamia greek yogurt is one of the most authentic yoghurts which advocates a healthy lifestyle with delicious taste. An excellent source of protein without the added fat.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                40
              </p>
              <button
                aria-label="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6d9e01a7c3842953088a"
                name="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
                title="Buy Epigamia Greek Yogurt - Blueberry, 90 gm Cup @Rs.40"
              >
                Buy now
              </button>
            </div>
          </li>
          <li
            class="ProductItemstyles__ProductItemWrapper-sc-15a910p-0 bRmhtp"
          >
            <div
              class="ProductItemstyles__ProductDescription-sc-15a910p-1 cShbCF"
            >
              <h3
                title="Epigamia Greek Yogurt - Strawberry, 90 gm"
              >
                Epigamia Greek Yogurt - Strawberry, 90 gm
              </h3>
              <div>
                <div
                  style="display: block; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
                >
                  <div
                    style="display: block; box-sizing: border-box; padding-top: 100%;"
                  />
                  <noscript />
                  <img
                    alt="Epigamia Greek Yogurt - Strawberry, 90 gm"
                    data-nimg="true"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="Epigamia Greek Yogurt - Strawberry, 90 gm"
                  />
                </div>
              </div>
              <p>
                Low Fat and High protein delicious and thick Greek Yogurt.
              </p>
            </div>
            <div
              class="ProductItemstyles__PriceSection-sc-15a910p-2 iWBENQ"
            >
              <p>
                MRP Rs.
                40
              </p>
              <button
                aria-label="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                class="Buttonstyles__SubmitButton-sc-5pqk3u-0 cIowWi"
                id="buy-5b6c6dd701a7c3842953088b"
                name="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
                title="Buy Epigamia Greek Yogurt - Strawberry, 90 gm @Rs.40"
              >
                Buy now
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
